--- a/LogMeIn-PoCHandleDup/LogMeIn-PoCHandleDup.vcxproj.filters
+++ b/LogMeIn-PoCHandleDup/LogMeIn-PoCHandleDup.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LMI-Common.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="LMI-Common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
