--- a/LogMeIn-PoCHandleDup/LogMeIn-PoCHandleDup.vcxproj
+++ b/LogMeIn-PoCHandleDup/LogMeIn-PoCHandleDup.vcxproj
@@ -141,7 +141,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="LMI-Common.cpp" />
     <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="LMI-Common.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
